Add service discovery